[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/newspaper_broken.png" type="Texture" id=1]
[ext_resource path="res://sprites/newspaper.png" type="Texture" id=2]
[ext_resource path="res://objects/scripts/newspaper_machine.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "broken",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 10 )

[sub_resource type="CircleShape2D" id=3]
radius = 60.0

[sub_resource type="CircleShape2D" id=4]
radius = 1024.0

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 22 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 4 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = -35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
bbcode_enabled = true
bbcode_text = "Заплати всего [u][color=red]10 монет[/color][/u] и получи свежую 
[wave amp=50 freq=2][color=yellow]Г А З Е Т У[/color][/wave]"
text = "Заплати всего 10 монет и получи свежую 
Г А З Е Т У"

[node name="Button" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 0.7
margin_left = -64.0
margin_top = 0.5
margin_right = 76.0
margin_bottom = 22.5
grow_horizontal = 2
disabled = true
text = "получить"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
